Fixes Spacing between Title and Info
SRFCMSAL-2501

--- a/source/_patterns/10-atoms/text/teaser-info.scss
+++ b/source/_patterns/10-atoms/text/teaser-info.scss
@@ -17,6 +17,7 @@
 
 .teaser-info-wrapper--no-gap {
   align-items: flex-start;
+  margin-top: 4px;
 }
 
 // hide empty teaser infos to not introduce additional gaps in the teaser
